--- a/source/less/photo-page.less
+++ b/source/less/photo-page.less
@@ -24,9 +24,9 @@
 
 .photo-page__intro {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   min-height: 163px;
   font-size: 14px;
   line-height: 30px;
@@ -35,13 +35,15 @@
 
 @media (min-width: @tablet-width) {
   .photo-page__intro {
-    min-height: 228px;
+    min-height: 187px;
+    font-size: 18px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .photo-page__intro {
     min-height: 241px;
+    //border: 1px solid red;
   }
 }
 
@@ -53,14 +55,15 @@
 
 @media (min-width: @tablet-width) {
   .photo-page__intro p {
-    margin-top: 100px;
+    margin-top: 91px;
     width: 440px;
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
   .photo-page__intro p {
-    width: 450px;
+    margin-top: 91px;
+    width: 640px;
   }
 }
 
