--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -86,21 +86,27 @@
   position: absolute;
   width: 258px;
   left: 0;
-  bottom: 275px;
+  bottom: 270px;
   z-index: 1;
+
+  img {
+    width: 100%;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .get-app__image {
     width: 700px;
-    height: 550px;
-    bottom: 0;
+    left: -20px;
+    bottom: -5px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .get-app__image {
     width: 1050px;
+    left: 20px;
+    bottom: 95px;
   }
 }
 
