--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -57,6 +57,11 @@
     margin-right: -5px;
     margin-top: 74px;
   }
+
+  .page-footer__social--photo {
+    margin-right: -11px;
+    margin-top: 104px;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -68,6 +73,10 @@
 @media (min-width: @desktop-width) {
   .page-footer__copyright {
     margin-top: 83px;
+  }
+
+  .page-footer__copyright--photo {
+    margin-top: 113px;
   }
 }
 
@@ -85,5 +94,9 @@
 @media (min-width: @desktop-width) {
   .page-footer__logo-image {
     margin-top: 69px;
+  }
+
+  .page-footer__logo-image--photo {
+    margin-top: 99px;
   }
 }
