--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -27,7 +27,7 @@
 
   font-size: 24px;
   line-height: 29px;
-  font-weight: 300px;
+  font-weight: 300;
   text-align: center;
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
@@ -39,7 +39,7 @@
 
 @media (min-width: @tablet-width) {
   .page-header__title {
-    padding-top: 80px;
+    padding-top: 70px;
     min-height: 330px;
 
     font-size: 50px;
@@ -53,19 +53,11 @@
   }
 }
 
-@media (min-width: @tablet-width) {
-  .page-header__title {
-    padding-top: 80px;
-    min-height: 285px;
-
-    font-size: 50px;
-    line-height: 60px;
-  }
-}
-
 @media (min-width: @desktop-width) {
   .page-header__title {
-    width: 550px;
+    padding-top: 65px;
+    width: 620px;
+    min-height: 284px;
     background: none;
   }
 }
