--- a/source/less/user-card.less
+++ b/source/less/user-card.less
@@ -14,33 +14,40 @@
   }
 }
 
-@media (min-width: @desktop-width) {
-  .user-card {
-    margin-bottom: 50px;
-  }
-}
-
 .user-card__image {
   .indent-reset();
   display: flex;
+
+  img {
+    width: 100%;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .user-card__image {
+    width: 100%;
+  }
 }
 
 .user-card__info {
   margin: 0;
   margin-top: 18px;
   padding: 0 18px;
-  //border: 1px solid red;
   display: flex;
   align-items: flex-start;
   text-align: left;
   flex-wrap: wrap;
+  box-sizing: border-box;
 }
 
 @media (min-width: @tablet-width) {
   .user-card__info {
-    margin-top: 31px;
-    min-height: 155px;
+    padding-left: 28px;
+    padding-top: 5px;
+    //margin-top: 21px;
+    height: 136px;
     flex-direction: column;
+
   }
 }
 
@@ -54,6 +61,7 @@
 
 .user-card__online {
   .indent-reset();
+  margin-left: 3px;
   font-size: 12px;
   line-height: 24px;
   font-weight: 300;
@@ -88,7 +96,7 @@
   .user-card__like {
     margin: 0;
     margin-top: auto;
-    margin-bottom: 24px;
+    margin-bottom: 22px;
     width: 100%;
     justify-content: space-between;
   }
@@ -102,6 +110,7 @@
   .user-card__like-icon {
     order: 1;
     margin: 0;
+    margin-right: 15px;
   }
 }
 
@@ -112,10 +121,38 @@
   background-color: #ffffff;
 }
 
+@media (min-width: @tablet-width) {
+  .user-card--panoramic {
+    margin-top: 39px;
+    margin-bottom: 13px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .user-card--panoramic {
+    margin-top: 0;
+  }
+}
+
 .user-card__image--panoramic {
   width: 100%;
   margin: 0 auto;
-  display: flex;
+
+  img {
+    width: 100%;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .user-card__image--panoramic {
+    height: 509px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .user-card__image--panoramic {
+    height: 505px;
+  }
 }
 
 .user-card__info--panoramic {
@@ -135,8 +172,7 @@
     padding: 25px 27px;
     padding-bottom: 0;
     width: 620px;
-    min-height: 121px;
-    margin-bottom: 50px;
+    height: 121px;
     box-sizing: border-box;
   }
 }
@@ -144,7 +180,8 @@
 @media (min-width: @desktop-width) {
   .user-card__info--panoramic {
     width: 940px;
-    min-height: 100px;
+    height: 96px;
+    //border: 1px solid red;
   }
 }
 
@@ -170,14 +207,14 @@
 
 @media (min-width: @tablet-width) {
   .user-card__info--panoramic::before {
-    left: 560px;
-    bottom: -100px;
+    left: 480px;
+    top: -452px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .user-card__info--panoramic::before {
-    left: 940px;
+    left: 800px;
     bottom: -100px;
   }
 }
