--- a/source/less/photo-adjust.less
+++ b/source/less/photo-adjust.less
@@ -37,7 +37,6 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    //border: 1px solid green;
 
     &::after {
       display: none;
@@ -69,7 +68,6 @@
     flex-direction: row;
     justify-content: flex-start;
     width: 276px;
-    //border: 1px solid red;
   }
 }
 
@@ -95,7 +93,6 @@
     width: 100%;
     align-items: flex-end;
     justify-content: flex-start;
-    //border: 1px solid red;
   }
 }
 
@@ -144,7 +141,6 @@
     height: 25px;
     margin-left: 2px;
     margin-bottom: 22px;
-    //border: 1px solid green;
   }
 }
 
@@ -320,6 +316,8 @@
   margin-top: 74px;
   margin-bottom: 13px;
   width: 280px;
+
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
@@ -340,6 +338,8 @@
   padding: 15px 0;
   margin-bottom: 41px;
   width: 280px;
+
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
